<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="45dp">

        <!-- Título -->

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interesse_em_adocao"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/albert_sans_light"
            android:layout_marginBottom="24dp"/>

        <!-- Nome -->

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_completo"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Telefone -->

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Moradia -->

        <EditText
            android:id="@+id/etMoradia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/tipo_de_moradia"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Outros animais -->

        <EditText
            android:id="@+id/etAnimais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/possui_outros_animais"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Experiência -->

        <EditText
            android:id="@+id/etExperiencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/experiencia_com_pets"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Observações -->

        <EditText
            android:id="@+id/etObservacoes"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:gravity="top"
            android:hint="@string/observacoes_adicionais"
            android:background="@color/verdebb"
            android:fontFamily="@font/albert_sans_light"/>

        <!-- Botão -->

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/verdebtn"
            android:text="@string/enviar_solicitacao"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/albert_sans_light"/>

    </LinearLayout>

</ScrollView>