<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/albert_sans_light"
            android:text="@string/criar_uma_conta_adotante"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/albert_sans_light"
            android:hint="@string/nome_completo" />

        <EditText
            android:id="@+id/etCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albert_sans_light"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/cpf"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:fontFamily="@font/albert_sans_light"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="Email"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:fontFamily="@font/albert_sans_light"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="Senha"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etCep"
            android:layout_width="match_parent"
            android:fontFamily="@font/albert_sans_light"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/cep"
            android:layout_marginTop="12dp"/>

        <Spinner
            android:id="@+id/spEstado"
            android:fontFamily="@font/albert_sans_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albert_sans_light"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/cidade"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albert_sans_light"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/endereco"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#498933"
            android:fontFamily="@font/albert_sans_light"
            android:text="@string/criar_conta"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>